--- a/Aplicacion/Vista/componentes/actualizacion.phtml
+++ b/Aplicacion/Vista/componentes/actualizacion.phtml
@@ -1,4 +1,7 @@
 <?php
+
+	//var_dump($object_product); exit;
+
 	$product = $object_product['ObjectProduct']['Product'];
 	$content_type = $object_product['ObjectProduct']['ContentType'];
 	$array_version = $object_product['ObjectProduct']['ObjectVersion'];
