--- a/Aplicacion/Vista/componentes/producto.phtml
+++ b/Aplicacion/Vista/componentes/producto.phtml
@@ -55,35 +55,35 @@
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<ul class="list-icono">
 									<li>
-										<input type="radio" id="icono-p-1" name="radio-product" class="icono-product" icono="fa-desktop" checked="checked">
+										<input type="radio" id="icono-p-1" name="radio-product" class="icono-product" value="fa-desktop" checked="checked">
 										<label for="icono-p-1"><i class="fa fa-desktop fa-icono"></i></label>
 									</li>
 									<li>
-										<input type="radio" id="icono-p-2" name="radio-product" class="icono-product" icono="fa-fax">
+										<input type="radio" id="icono-p-2" name="radio-product" class="icono-product" value="fa-fax">
 										<label for="icono-p-2"><i class="fa fa-fax fa-icono"></i></label>
 									</li>
 									<li>
-										<input type="radio" id="icono-p-3" name="radio-product" class="icono-product" icono="fa-laptop">
+										<input type="radio" id="icono-p-3" name="radio-product" class="icono-product" value="fa-laptop">
 										<label for="icono-p-3"><i class="fa fa-laptop fa-icono"></i></label>
 									</li>
 									<li>
-										<input type="radio" id="icono-p-4" name="radio-product" class="icono-product" icono="fa-edit">
+										<input type="radio" id="icono-p-4" name="radio-product" class="icono-product" value="fa-edit">
 										<label for="icono-p-4"><i class="fa fa-edit fa-icono"></i></label>
 									</li>
 									<li>
-										<input type="radio" id="icono-p-5" name="radio-product" class="icono-product" icono="fa-archive">
+										<input type="radio" id="icono-p-5" name="radio-product" class="icono-product" value="fa-archive">
 										<label for="icono-p-5"><i class="fa fa-archive fa-icono"></i></label>
 									</li>
 									<li>
-										<input type="radio" id="icono-p-6" name="radio-product" class="icono-product" icono="fa-database">
+										<input type="radio" id="icono-p-6" name="radio-product" class="icono-product" value="fa-database">
 										<label for="icono-p-6"><i class="fa fa-database fa-icono"></i></label>
 									</li>
 									<li>
-										<input type="radio" id="icono-p-7" name="radio-product" class="icono-product" icono="fa-suitcase">
+										<input type="radio" id="icono-p-7" name="radio-product" class="icono-product" value="fa-suitcase">
 										<label for="icono-p-7"><i class="fa fa-suitcase fa-icono"></i></label>
 									</li>
 									<li>
-										<input type="radio" id="icono-p-8" name="radio-product" class="icono-product" icono="fa-tag">
+										<input type="radio" id="icono-p-8" name="radio-product" class="icono-product" value="fa-tag">
 										<label for="icono-p-8"><i class="fa fa-tag fa-icono"></i></label>
 									</li>
 									<li class="clear-both"></li>
@@ -132,6 +132,13 @@
 				</div>
 				<div class="x_content">
 					<form id="form-version" class="form-horizontal form-label-left" autocomplete="off">
+						<div class="form-group input-none">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="version-id">Id</label>
+							<div class="col-md-6 col-sm-6 col-xs-12">
+								<input type="text" id="version-id" name="version-id" placeholder="idversion" class="form-control col-md-7 col-xs-12">
+							</div>
+						</div>
+
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="version-description">Versión <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
