--- a/Aplicacion/Vista/construction.phtml
+++ b/Aplicacion/Vista/construction.phtml
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="http://www.retailcs.com/extranet/"/>
+    <base href="<?php echo HTTP_HOST; ?>"/>
 
     <title>Retail Custom Solutions</title>
 
