--- a/Static/css/login.css
+++ b/Static/css/login.css
@@ -42,11 +42,12 @@ html{
     width: 100%;
     height: 100%;
     font-family: 'Lato-Regular';
-    background-image: url(../images/bg.jpg);
+    /*background-image: url(../images/bg.jpg);*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -ms-background-size: cover;
     background-size: cover;
+    background: #2A3F54;
 }
 body{
     font-family: 'Lato-Regular';
