--- a/Aplicacion/Vista/componentes/index.phtml
+++ b/Aplicacion/Vista/componentes/index.phtml
@@ -1,14 +1,3 @@
-<?php
-
-    var_dump($info_recent);
-
-    echo "<br>FJCR";
-    /*foreach ($info_recent as $key => $value) {
-        echo $value."</br>";
-    }*/
-
-?>
-
 <div class="container info-reciente">
 	<div class="row">
 		<div class="col-md-12">
@@ -22,111 +11,8 @@
             <div class="x_content">
                 <div class="row">
 
-
-
-                    <div class="col-md-3 col-xs-12 widget_fj widget_tally_box" ser="1" page="actualizacion">
-                        <div class="x_panel ui-ribbon-container fixed_height_390_fj">
-                            <div class="ui-ribbon-wrapper">
-                                <div class="ui-ribbon">Nuevo</div>
-                            </div>
-                            <div class="tile-stats">
-                                <div class="icon"><i class="fa fa-desktop"></i></div>
-                                <div class="count">15</div>
-                                <h3>RMS.NET</h3>
-                                <div class="divider"></div>
-                            </div>   
-                            <div class="x_content">
-                                <h3 class="name_title">Actualizaciones</h3>
-                                <div>
-                                    <ul class="list-inline widget_tally">
-                                        <li>
-                                            <a href="javascript:void(0)" ver="" order="" class="info-recent">
-                                                <span class="month">Versión 7.0 </span>
-                                                <span class="count"><span class="badge badge-success">3</span></span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0)" ver="3" order="3" class="info-recent">
-                                                <span class="month">Versión 8.0 </span>
-                                                <span class="count"><span class="badge badge-success">3</span></span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0)" ver="" order="" class="info-recent">
-                                                <span class="month">Versión 9.0 </span>
-                                                <span class="count"><span class="badge badge-success">3</span></span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>                        
-                        </div>
-                    </div>
-
-
-                    <!--
-                    <div class="col-md-3 col-xs-12 widget_fj widget_tally_box">
-                        <div class="x_panel ui-ribbon-container fixed_height_390_fj">
-                            <div class="ui-ribbon-wrapper state-ribbon">
-                                <div class="ui-ribbon">Nuevo</div>
-                            </div>
-                            <div class="tile-stats">
-                                <div class="icon"><i class="fa fa-fax"></i></div>
-                                <div class="count">9</div>
-                                <h3>POS.NET</h3>
-                                <div class="divider"></div>
-                            </div>   
-                            <div class="x_content">
-                                <h3 class="name_title">Correcciones</h3>
-                                <div>
-                                    <ul class="list-inline widget_tally">
-                                        <li>
-                                            <a href="#">
-                                                <span class="month">Versión 8.0 </span>
-                                                <span class="count"><span class="badge badge-success">3</span></span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>                        
-                        </div>
-                    </div>
-
-
-                    <div class="col-md-3 col-xs-12 widget_fj widget_tally_box">
-                        <div class="x_panel ui-ribbon-container fixed_height_390_fj">
-                            <div class="ui-ribbon-wrapper">
-                                <div class="ui-ribbon">Nuevo</div>
-                            </div>
-                            <div class="tile-stats">
-                                <div class="icon"><i class="fa fa-laptop"></i></div>
-                                <div class="count">11</div>
-                                <h3>POLLING</h3>
-                                <div class="divider"></div>
-                            </div>   
-                            <div class="x_content">
-                                <h3 class="name_title">Manuales</h3>
-                                <div>
-                                    <ul class="list-inline widget_tally">
-                                        <li>
-                                            <a href="#">
-                                                <span class="month">Versión 8.0 </span>
-                                                <span class="count"><span class="badge badge-success">3</span></span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <span class="month">Versión 9.0 </span>
-                                                <span class="count"><span class="badge badge-success">3</span></span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>                        
-                        </div>
-                    </div>
-                    -->
-
+                    <?php echo $info_recent; ?>
+                    
                 </div>
             </div>      
 		</div>
